Fix too wide info thing.

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ canvas {
 }
 
 .info {
-	width: 100%;
+	width: calc(100% - 20px);
 	color: #eee;
 	font: 24px 'helvetica', arial, sans-serif;
 	text-align: center;
@@ -35,6 +35,8 @@ canvas {
 	background: rgba(0, 0, 0, 0.4);
 	top: 0;
 	bottom: 0;
+	left: 0;
+	right: 0;
 	margin: auto;
 	height: 120px;
 	padding: 48px;
